apps/prod/public/xray/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: hysteria
  namespace: xray
  labels:
    app.kubernetes.io/name: xray
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: xray
    app.kubernetes.io/component: app
  ports:
    - name: port-1
      port: 9443
      protocol: UDP
  loadBalancerIP: 192.168.200.17
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: xray
  labels:
    app.kubernetes.io/name: xray
    app.kubernetes.io/component: app
spec:
  selector:
    app.kubernetes.io/name: xray
    app.kubernetes.io/component: app
  ports:
    - name: proxy-1
      port: 8000
  type: ClusterIP
